--- a/app/src/main/res/layout/controller_settings.xml
+++ b/app/src/main/res/layout/controller_settings.xml
@@ -169,7 +169,6 @@
     <com.yarolegovich.mp.MaterialPreferenceCategory
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/padding_between_elements"
         android:animateLayoutChanges="true"
         apc:mpc_title="@string/nc_about"
         apc:mpc_title_color="@color/colorPrimary">
@@ -199,6 +198,7 @@
             android:id="@+id/settings_version"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="48dp"
             apc:mp_summary="v0.1"
             apc:mp_title="@string/nc_app_name">
         </com.yarolegovich.mp.MaterialStandardPreference>
