--- a/app/src/main/res/menu/menu_navigation.xml
+++ b/app/src/main/res/menu/menu_navigation.xml
@@ -4,8 +4,8 @@
     <item
         android:id="@+id/navigation_calls"
         android:checked="true"
-        android:icon="@drawable/ic_videocam_black_24dp"
-        android:title="@string/nc_bottom_navigation_title_calls"/>
+        android:icon="@drawable/ic_logo"
+        android:title="@string/nc_bottom_navigation_title_conversations"/>
 
     <item
         android:id="@+id/navigation_contacts"
