--- a/app/src/main/res/layout/controller_call_menu.xml
+++ b/app/src/main/res/layout/controller_call_menu.xml
@@ -29,7 +29,7 @@
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:listitem="@layout/rv_item_call"/>
+        tools:listitem="@layout/rv_item_conversation"/>
 
 
 </RelativeLayout>
