Fix layout code & some memory issues
Signed-off-by: Mario Danic <mario@lovelyhq.com>

--- a/app/src/main/res/layout/item_custom_incoming_text_message.xml
+++ b/app/src/main/res/layout/item_custom_incoming_text_message.xml
@@ -53,21 +53,20 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/colorPrimary"
-            android:textSize="12sp"
-            app:layout_alignSelf="flex_start"/>
+            android:textSize="12sp"/>
 
         <TextView
             android:id="@id/messageText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_alignSelf="flex_start"
+            app:layout_flexGrow="1"
             app:layout_wrapBefore="true"/>
 
         <TextView
             android:id="@id/messageTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/messageText"
             android:layout_marginStart="8dp"
             app:layout_alignSelf="center"/>
 
