make bottom sheets' background white

--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -24,7 +24,7 @@
                                                      android:id="@+id/bottom_sheet"
                                                      android:layout_width="match_parent"
                                                      android:layout_height="wrap_content"
-                                                     android:background="?android:attr/windowBackground"
+                                                     android:background="@color/white"
                                                      app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
 
