--- a/app/src/main/res/layout/rv_item_menu.xml
+++ b/app/src/main/res/layout/rv_item_menu.xml
@@ -24,7 +24,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/white">
 
     <TextView
         android:id="@+id/menu_text"
