Close autocomplete on attach
Signed-off-by: Mario Danic <mario@lovelyhq.com>

--- a/app/src/main/res/layout/rv_item_mention.xml
+++ b/app/src/main/res/layout/rv_item_mention.xml
@@ -58,7 +58,7 @@
 
         <TextView
             android:id="@+id/name_text"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ellipsize="middle"
             android:singleLine="true"
