--- a/app/src/main/res/layout/controller_chat.xml
+++ b/app/src/main/res/layout/controller_chat.xml
@@ -32,13 +32,15 @@
         app:incomingDefaultBubbleColor="@color/white_two"
         app:incomingDefaultBubblePressedColor="@color/white_two"
         app:incomingDefaultBubbleSelectedColor="@color/colorPrimaryDark"
-        app:incomingTextSize="14sp"
+        app:incomingTextSize="@dimen/chat_text_size"
         app:incomingTimeTextSize="12sp"
         app:outcomingDefaultBubbleColor="@color/colorPrimary"
         app:outcomingDefaultBubblePressedColor="@color/colorPrimary"
         app:outcomingDefaultBubbleSelectedColor="@color/colorPrimaryDark"
-        app:outcomingTextSize="14sp"
+        app:outcomingTextSize="@dimen/chat_text_size"
         app:outcomingTimeTextSize="12sp"
+        app:outcomingTextColor="@color/nc_outcoming_text_default"
+        app:incomingTextColor="@color/nc_incoming_text_default"
         app:textAutoLink="all"/>
 
     <View
