--- a/app/src/main/res/layout/surface_renderer.xml
+++ b/app/src/main/res/layout/surface_renderer.xml
@@ -59,6 +59,6 @@
         android:layout_marginBottom="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
-        android:textColor="@color/nc_white_color_complete"/>
+        android:textColor="@android:color/white"/>
 
 </RelativeLayout>
