--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,4 +18,6 @@
     <dimen name="avatar_size_big">80dp</dimen>
     <dimen name="avatar_corner_radius">20dp</dimen>
 
+    <dimen name="chat_text_size">14sp</dimen>
+
 </resources>
