--- a/app/src/main/res/layout/controller_chat.xml
+++ b/app/src/main/res/layout/controller_chat.xml
@@ -40,7 +40,9 @@
         app:outcomingTextSize="@dimen/chat_text_size"
         app:outcomingTimeTextSize="12sp"
         app:outcomingTextColor="@color/nc_outcoming_text_default"
+        app:outcomingTextLinkColor="@color/nc_outcoming_text_default"
         app:incomingTextColor="@color/nc_incoming_text_default"
+        app:incomingTextLinkColor="@color/nc_incoming_text_default"
         app:textAutoLink="all"/>
 
     <View
