--- a/app/src/main/res/layout/controller_chat.xml
+++ b/app/src/main/res/layout/controller_chat.xml
@@ -39,6 +39,7 @@
         app:outcomingDefaultBubbleSelectedColor="@color/colorPrimaryDark"
         app:outcomingTextSize="@dimen/chat_text_size"
         app:outcomingTimeTextSize="12sp"
+        app:outcomingTimeTextColor="@color/warm_grey_four"
         app:outcomingTextColor="@color/nc_outcoming_text_default"
         app:outcomingTextLinkColor="@color/nc_outcoming_text_default"
         app:incomingTextColor="@color/nc_incoming_text_default"
