--- a/app/src/main/res/drawable/ic_baseline_arrow_downward_24px.xml
+++ b/app/src/main/res/drawable/ic_baseline_arrow_downward_24px.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Nextcloud Talk application
   ~
@@ -19,19 +18,9 @@
   ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
   -->
 
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <item
-        android:id="@+id/conversation_voice_call"
-        android:icon="@drawable/ic_call_white_24dp"
-        android:title="@string/nc_conversation_menu_voice_call"
-        android:visible="false"
-        app:showAsAction="always"/>
-
-    <item
-        android:id="@+id/conversation_video_call"
-        android:icon="@drawable/ic_videocam_white_24px"
-        android:title="@string/nc_conversation_menu_video_call"
-        app:showAsAction="always"/>
-</menu>
+<vector android:autoMirrored="true" android:height="24dp"
+    android:viewportHeight="24" android:viewportWidth="24"
+    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#ffffff"
+          android:pathData="M20,12l-1.41,-1.41L13,16.17V4h-2v12.17l-5.58,-5.59L4,12l8,8 8,-8z"/>
+</vector>
