--- a/app/src/main/res/layout/rv_item_mention.xml
+++ b/app/src/main/res/layout/rv_item_mention.xml
@@ -49,10 +49,11 @@
 
     <LinearLayout
         android:id="@+id/linear_layout"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:layout_marginStart="@dimen/margin_between_elements"
+        android:layout_marginEnd="@dimen/margin_between_elements"
         android:layout_toEndOf="@id/frame_layout"
         android:orientation="vertical">
 
@@ -70,6 +71,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:singleLine="true"
+            android:ellipsize="middle"
             android:textColor="?android:attr/textColorSecondary"
             tools:text="A week ago"/>
 
