--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,5 +16,6 @@
     <color name="nc_material_yellow">#FFEB3B</color>
     <color name="nc_light_grey">#E8E8E8</color>
     <color name="grey_600">#757575</color>
+    <color name="nc_grey">#D5D5D5</color>
 </resources>
 
