--- a/app/src/main/res/layout/controller_chat.xml
+++ b/app/src/main/res/layout/controller_chat.xml
@@ -25,10 +25,10 @@
                 android:layout_height="match_parent">
 
     <com.stfalcon.chatkit.messages.MessagesList
-        android:id="@+id/messagesList"
+        android:id="@+id/messagesListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/nc_message_input"
+        android:layout_above="@+id/messageInputView"
         app:incomingDefaultBubbleColor="@color/white_two"
         app:incomingDefaultBubblePressedColor="@color/white_two"
         app:incomingDefaultBubbleSelectedColor="@color/colorPrimaryDark"
@@ -47,7 +47,7 @@
         app:textAutoLink="all"/>
 
     <com.webianks.library.PopupBubble
-        android:id="@+id/nc_popup_bubble"
+        android:id="@+id/popupBubbleView"
         android:layout_margin="16dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -63,13 +63,13 @@
         android:id="@+id/separator"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_above="@+id/nc_message_input"
+        android:layout_above="@+id/messageInputView"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:background="@color/nc_light_grey"/>
 
     <com.stfalcon.chatkit.messages.MessageInput
-        android:id="@+id/nc_message_input"
+        android:id="@+id/messageInputView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
