--- a/app/src/main/res/layout/controller_call_notification.xml
+++ b/app/src/main/res/layout/controller_call_notification.xml
@@ -23,7 +23,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black">
+    android:background="@color/grey950">
 
     <TextView
         android:id="@+id/incomingCallTextView"
