--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,7 +17,7 @@
     <color name="nc_light_grey">#E8E8E8</color>
     <color name="grey_600">#757575</color>
     <color name="nc_grey">#D5D5D5</color>
-    <color name="white30">#e9ffffff</color>
-    <color name="grey950">#0f0f0f</color>
+    <color name="white30">#e9FFFFFF</color>
+    <color name="grey950">#0F0F0F</color>
 </resources>
 
