--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,6 +18,6 @@
     <color name="grey_600">#757575</color>
     <color name="nc_grey">#D5D5D5</color>
     <color name="white30">#E9FFFFFF</color>
-    <color name="grey950">#0F0F0F</color>
+    <color name="grey950">#111111</color>
 </resources>
 
