--- a/app/src/main/res/layout/controller_call_notification.xml
+++ b/app/src/main/res/layout/controller_call_notification.xml
@@ -29,7 +29,7 @@
         android:id="@+id/incomingCallTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:text="@string/nc_incoming_call"
         android:textAlignment="center"
         android:textColor="@color/white30"
@@ -57,51 +57,45 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.498"
+        app:layout_constraintVertical_bias="0.45"
         tools:src="@color/white" />
 
-    <com.nextcloud.talk.utils.MagicFlipView
-        android:id="@+id/callAnswerVoiceOnlyView"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginBottom="48dp"
-        app:checked="false"
-        app:enableInitialAnimation="false"
-        app:frontBackgroundColor="@color/colorPrimary"
-        app:frontImage="@drawable/ic_mic_white_24px"
-        app:layout_anchorGravity="top|center"
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.129"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent">
+        <com.nextcloud.talk.utils.MagicFlipView
+            android:id="@+id/callAnswerVoiceOnlyView"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_margin="24dp"
+            app:checked="false"
+            app:enableInitialAnimation="false"
+            app:frontBackgroundColor="@color/colorPrimary"
+            app:frontImage="@drawable/ic_mic_white_24px" />
 
-    <com.nextcloud.talk.utils.MagicFlipView
-        android:id="@+id/callAnswerCameraView"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginBottom="48dp"
-        app:checked="false"
-        app:enableInitialAnimation="false"
-        app:frontBackgroundColor="@color/colorPrimary"
-        app:frontImage="@drawable/ic_videocam_white_24px"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent" />
+        <com.nextcloud.talk.utils.MagicFlipView
+            android:id="@+id/callAnswerCameraView"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_margin="24dp"
+            app:checked="false"
+            app:enableInitialAnimation="false"
+            app:frontBackgroundColor="@color/colorPrimary"
+            app:frontImage="@drawable/ic_videocam_white_24px" />
 
 
-    <com.nextcloud.talk.utils.MagicFlipView
-        android:id="@+id/callControlHangupView"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginBottom="48dp"
-        app:checked="false"
-        app:enableInitialAnimation="false"
-        app:frontBackgroundColor="@color/nc_darkRed"
-        app:frontImage="@drawable/ic_call_end_white_24px"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.87"
-        app:layout_constraintStart_toStartOf="parent" />
+        <com.nextcloud.talk.utils.MagicFlipView
+            android:id="@+id/callControlHangupView"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_margin="24dp"
+            app:checked="false"
+            app:enableInitialAnimation="false"
+            app:frontBackgroundColor="@color/nc_darkRed"
+            app:frontImage="@drawable/ic_call_end_white_24px" />
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
