use different avatar sizes for landscape/portrait for call notification while always fetch the larger version (portrait size)

--- a/app/src/main/res/values-land/dimens.xml
+++ b/app/src/main/res/values-land/dimens.xml
@@ -5,4 +5,6 @@
 
     <dimen name="display_target_image_size">120dp</dimen>
     <dimen name="display_target_image_margin">16dp</dimen>
+
+    <dimen name="avatar_size_very_big">120dp</dimen>
 </resources>
