--- a/app/src/main/res/layout/controller_call.xml
+++ b/app/src/main/res/layout/controller_call.xml
@@ -26,7 +26,7 @@
                 android:layout_height="match_parent"
                 android:background="@color/grey950"
                 android:fitsSystemWindows="true"
-                tools:context=".activities.CallActivity">
+                tools:context=".activities.MagicCallActivity">
 
     <RelativeLayout
         android:id="@+id/connectingRelativeLayoutView"
