--- a/app/src/main/res/layout/controller_call.xml
+++ b/app/src/main/res/layout/controller_call.xml
@@ -140,6 +140,19 @@
             app:enableInitialAnimation="false"
             app:frontBackgroundColor="@color/nc_darkRed"
             app:frontImage="@drawable/ic_call_end_white_24px"/>
+
+        <com.nextcloud.talk.utils.MagicFlipView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/callControlEnableSpeaker"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginStart="20dp"
+            app:checked="false"
+            android:visibility="gone"
+            app:enableInitialAnimation="false"
+            app:frontBackgroundColor="@color/colorPrimary"
+            app:frontImage="@drawable/ic_hearing_white_24dp"/>
+
     </LinearLayout>
 
 </RelativeLayout>
